# AsyncNotes

./: README.md  database.py  docker-compose.yml  main.py  models.py  note_crud.py  pyproject.toml  requirements.txt  schemas.py  tag_crud.py
app/: auth_utils.py  models.py  schemas.py
app/crud/: auth_crud.py  note_crud.py  tag_crud.py
app/routers/: auth.py  notes.py  tags.py
migrations/: env.py
migrations/versions/: e17bc88de54d_add_note_and_tag_models.py  e4f6f7b30b89_create_user_table.py
telegram_bot/: bot.py
